--- a/src/css/container.scss
+++ b/src/css/container.scss
@@ -15,3 +15,16 @@ html {
   height: 100%;
   width: 100%;
 }
+
+/*
+Loader Styles
+ */
+.loader{
+  display: flex;
+  align-items: center;
+  overflow: auto;
+}
+
+.loader-container{
+  margin: auto;
+}
