adding css chartreé

--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,1 +1,11 @@
-$blue: #428eee;
+/*
+CHARTRE GRAPHIQUE
+ */
+
+$blue1: #016e8b;
+$blue2: #428eee;
+$beige1: #fff6cc;
+$beige2: #cbc39c;
+$white: #fff;
+$brown: #8e5526;
+$black: #000;
