--- a/src/css/container.scss
+++ b/src/css/container.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 .fullHeight {
   height: 100%;
 }
@@ -14,6 +16,8 @@ body {
 html {
   height: 100%;
   width: 100%;
+  background: $white;
+  font-family:'Roboto',sans-serif;
 }
 
 /*
@@ -27,4 +31,38 @@ Loader Styles
 
 .loader-container{
   margin: auto;
+}
+
+/*
+Buttons
+ */
+a.button{
+  display:inline-block;
+  padding:0.35em 1.2em;
+  border:0.1em solid $beige2;
+  margin:0 0.3em 0.3em 0;
+  border-radius:0.12em;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-family:'Roboto',sans-serif;
+  font-weight:300;
+  color:$black;
+  text-align:center;
+  transition: all 0.2s;
+  background-color: $beige1;
+}
+a.button:hover{
+  cursor: pointer;
+  background-color: $beige2;
+}
+@media all and (max-width:30em){
+  a.button1 {
+    display: block;
+    margin: 0.4em auto;
+  }
+}
+
+.bouncy{
+  animation:bouncy 5s infinite linear;
+  position:relative;
 }
