--- a/src/css/container.scss
+++ b/src/css/container.scss
@@ -20,6 +20,10 @@ html {
   font-family:'Roboto',sans-serif;
 }
 
+.login {
+  padding: 5px;
+}
+
 /*
 Loader Styles
  */
@@ -62,7 +66,44 @@ a.button:hover{
   }
 }
 
-.bouncy{
-  animation:bouncy 5s infinite linear;
-  position:relative;
+/*
+Inputs
+ */
+
+.input {
+  position: relative;
+  display: inline-block;
+  width: 300px;
+  margin: 6px;
+  vertical-align: top;
+  text-align: center;
+}
+
+.input__field {
+  margin-left: 20px;
+  display: block;
+  padding: 4px;
+  width: 260px;
+  border: none;
+  border-radius: 0;
+  background: $beige1;
+  color: $blue1;
+  font-weight: bold;
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
+}
+
+.input__field:focus {
+  outline: none;
+}
+
+.input__label {
+  display: block;
+  width: 100%;
+  color: $blue1;
+}
+
+.input__label-content {
+  position: relative;
+  display: block;
+  width: 100%;
 }
