--- a/src/css/accueil.scss
+++ b/src/css/accueil.scss
@@ -2,29 +2,39 @@
   position: relative;
 
   .accueil-presentation {
-    background-image: url("../images/aurore.svg");
-    background-size:cover;
+    position: relative;
+    margin-bottom: 50px;
+    background-image: url("../images/aurore.jpg");
+    background-size: cover;
     background-repeat: no-repeat;
-    background-position: 0 -30px;
+    background-origin: content-box;
     text-align: center;
-    border : none;
+
+    .accueil-loup {
+      width: 100%;
+      position: relative;
+      visibility: hidden;
+
+      &.absolute {
+        visibility: visible;
+        position: absolute;
+        left: 0;
+        bottom: -12%;
+      }
+    }
     .skiutc-title {
-      width: 40%;
-      margin: 10px;
-      margin-bottom: 20px;
+      width: 30%;
+      margin-top: 10px;
     }
   }
-  .accueil-navigation, .accueil-user {
+  .accueil-navigation {
     width: 100%;
     text-align: center;
-    a {
-      display: inline-block;
-      margin: 0 30px;
-    }
   }
 
   .accueil-user {
-    margin-top:50px;
+    width: 100%;
+    text-align: center;
     margin-bottom:50px;
   }
 }
