--- a/src/css/accueil.scss
+++ b/src/css/accueil.scss
@@ -1,6 +1,5 @@
 .accueil-container {
   position: relative;
-
   .accueil-presentation {
     position: relative;
     margin-bottom: 50px;
@@ -36,5 +35,13 @@
     width: 100%;
     text-align: center;
     margin-bottom:50px;
+  }
+}
+
+/*
+Responsive calls
+ */
+@media only screen and (max-width: 600px) {
+  body {
   }
 }
