adding voyage page

--- a/src/css/container.scss
+++ b/src/css/container.scss
@@ -1,5 +1,6 @@
 @import "variables";
 @import "../components/station/css/station.scss";
+@import "../components/voyage/css/voyage.scss";
 
 .fullHeight {
   height: 100%;
