--- a/src/css/container.scss
+++ b/src/css/container.scss
@@ -1,6 +1,7 @@
 @import "variables";
 @import "../components/station/css/station.scss";
 @import "../components/voyage/css/voyage.scss";
+@import "accueil.scss";
 
 .fullHeight {
   height: 100%;
