--- a/src/css/colors.scss
+++ b/src/css/colors.scss
@@ -7,4 +7,5 @@ $svg-hover-blue: invert(27%) sepia(40%) saturate(3102%) hue-rotate(167deg) brigh
 $brown: #8e5526;
 $light-brown:  	#FFCC66;
 $hover-light-brown: #fff5ca;
-$light-green : #26be17
+$light-green : #26be17;
+$light-blue: #5DBCD215;
