--- a/src/css/container.scss
+++ b/src/css/container.scss
@@ -3,6 +3,30 @@
 @import "../components/voyage/css/voyage.scss";
 @import "accueil.scss";
 
+@font-face {
+  font-family: "Acumin";
+  src: url('./acumin-pro-cufonfonts/Acumin-RPro.otf') format("opentype");
+}
+
+@font-face {
+  font-family: "Acumin";
+  font-style: italic;
+  src: url('./acumin-pro-cufonfonts/Acumin-ItPro.otf') format("opentype");
+}
+
+@font-face {
+  font-family: "Acumin";
+  font-weight: bold;
+  src: url('./acumin-pro-cufonfonts/Acumin-BdPro.otf') format("opentype");
+}
+
+@font-face {
+  font-family: "Acumin";
+  font-weight: bold;
+  font-style: italic;
+  src: url('./acumin-pro-cufonfonts/Acumin-BdItPro.otf') format("opentype");
+}
+
 .fullHeight {
   height: 100%;
 }
@@ -163,8 +187,7 @@ Inputs
   padding-left: 10px;
   padding-top: 10px;
   padding-right: 10px;
-  position: -webkit-sticky;
-  position: sticky;
+  position: absolute;
   z-index: 99;
   top: 0;
   float: left !important;
