--- a/src/css/container.scss
+++ b/src/css/container.scss
@@ -2,6 +2,7 @@
 @import "../components/station/css/station.scss";
 @import "../components/voyage/css/voyage.scss";
 @import "accueil.scss";
+@import "../components/common/css/pageTitle.scss";
 
 @font-face {
   font-family: "Acumin";
