--- a/src/css/container.scss
+++ b/src/css/container.scss
@@ -188,10 +188,10 @@ Inputs
   padding-left: 10px;
   padding-top: 10px;
   padding-right: 10px;
-  position: absolute;
+  position: sticky;
   z-index: 99;
   top: 0;
-  float: left !important;
+  float: left;
   .menu-context.expanded {
     opacity: 0.9;
     background: white;
