--- a/src/css/container.scss
+++ b/src/css/container.scss
@@ -3,6 +3,7 @@
 @import "../components/voyage/css/voyage.scss";
 @import "accueil.scss";
 @import "../components/common/css/pageTitle.scss";
+@import "../components/tombola/css/tombola.scss";
 
 @font-face {
   font-family: "Acumin";
