--- a/src/components/tombola/css/tombola.scss
+++ b/src/components/tombola/css/tombola.scss
@@ -1,4 +1,5 @@
 @mixin plusButton{
+    background-color: white;
     background-image: url("../images/button_+.svg");
     background-repeat: no-repeat;
     background-position: 50% 50%;
@@ -7,31 +8,37 @@
     border: none;
 }
 @mixin minusButton{
+    background-color: white;
     background-image: url("../images/button_-.svg");
     background-repeat: no-repeat;
     background-position: 50% 50%;
     width: 15px;
     height: 15px;
-    margin-right: 40px;
-    margin-left:10px;
+    margin-right: 30px;
     border: none;
 }
 @media only screen and (min-width: 768px) {
     .tombola{
-        background: url("../images/waves.svg") no-repeat;
-        background-size: contain;
-        background-position: top -25px;
+        background-color: white;
         position: absolute;
         height:100%;
         max-width: 100%;
-        padding-top: 25px;
         opacity: 0.8;
         width: 100%;
+        .halfTombolaBG{
+            z-index: -1;
+            position: absolute;
+            width:60%;
+            height: 100%;
+            background: url("../images/waves.png") no-repeat;
+            background-size: 100% 100%;
+        }
         .headBlock{
             width:100%;
             height:33%;
+            margin-top: 20px;
             .mainTitle{
-                width: 30%;
+                width: 380px;
                 margin-left: auto;
                 margin-right: auto;
             }
@@ -40,7 +47,7 @@
             width: 60%;
             float: left;
             .recapTitle{
-                width: 40%;
+                width: 300px;
                 left: 10%;
                 position: relative;
             }
@@ -58,18 +65,20 @@
         }
         .buy{
             margin-left: 55%;
-            width: 50%;
             .choices{
-                margin-left: 40px;
+                margin-left: 30px;
+                width: 350px;
                 .ticket-1{
+                    text-align: center;
                     float: left;
-                    margin-right: 10px;
+                    margin-right: 30px;
+                    width: 80px;
                     .logo {
                         background-image: url("../images/ticket_1.svg");
                         background-repeat: no-repeat;
                         background-position: 50% 50%;
-                        width: 90px;
-                        height: 90px;
+                        width: 80px;
+                        height: 80px;
 
                     }
                     .plus{
@@ -80,15 +89,17 @@
                     }
                 }
                 .ticket-5{
+                    text-align: center;
                     border: none;
                     float: left;
-                    margin-right: 10px;
+                    margin-right: 30px;
+                    width: 80px;
                     .logo {
                         background-image: url("../images/ticket_5.svg");
                         background-repeat: no-repeat;
                         background-position: 50% 50%;
-                        width: 90px;
-                        height: 90px;
+                        width: 80px;
+                        height: 80px;
 
                     }
                     .plus{
@@ -99,16 +110,16 @@
                     }
                 }
                 .ticket-10{
+                    text-align: center;
                     border: none;
-                    margin-left: 200x;
-                    margin-right: 10px;
+                    float: left;
+                    width: 80px;
                     .logo {
                         background-image: url("../images/ticket_10.svg");
                         background-repeat: no-repeat;
                         background-position: 50% 50%;
-                        width: 90px;
-                        height: 90px;
-                        margin-left: 200px;
+                        width: 80px;
+                        height: 80px;
                     }
                     .plus{
                         @include plusButton();
@@ -119,14 +130,18 @@
                 }
             }
             .buyButton{
-                margin-left: 85px;
+                clear: both;
+                margin-left:115px;
+                transform: translate(0px,-150px);
                 button {
+                    background-color: white;
                     background-image: url("../images/j_achete.svg");
                     background-repeat: no-repeat;
                     background-position: 50% 50%;
                     width: 200px;
                     height: 50px;
                     border: none;
+
                   }
                   button span {
                     display: none;
