--- a/src/components/tombola/css/tombola.scss
+++ b/src/components/tombola/css/tombola.scss
@@ -153,5 +153,135 @@
 
 
 @media only screen and (max-width: 600px) {
+    .tombola{
+        background-color: white;
+        position: absolute;
+        height: 100%;
+        max-width: 100%;
+        opacity: 0.8;
+        width: 100%;
+        .halfTombolaBG{
+            z-index: -1;
+            position: absolute;
+            width:100%;
+            height: 65%;
+            min-height: 390px;
+            background: url("../images/wavesRotated.png") no-repeat;
+            background-size: 100% 100%; 
+        }
+        .headBlock{
+            width:100%;
+            margin-top: 20px;
+            .mainTitle{
+                width: 70%;
+                margin-left: auto;
+                margin-right: auto;
+            }
+        }
+        .recap{
+            br {
+                display: none;
+            }
+            width: 100%;
+            .recapTitle{
+                width: 40%;
+                margin-left: auto;
+                margin-right: auto;
+                position: relative;
+            }
+            .recapTxt{
+                color: White;
+                margin-top: 20px;
+                position: relative;
+                width: 50%;
+                left: 10%;
+                font-size: 1.2em;
+            }
+            ul {
+                list-style: none;
+            }
+        }
+        .buy{
+            .choices{
+                .ticket-1{
+                    text-align: center;
+                    width: 80px;
+                    position: relative;
+                    left: calc(50% - 40px);
+                    .logo {
+                        background-image: url("../images/ticket_1.svg");
+                        background-repeat: no-repeat;
+                        background-position: 50% 50%;
+                        width: 80px;
+                        height: 80px;
 
+                    }
+                    .plus{
+                        @include plusButton();
+                    }
+                    .minus{
+                        @include minusButton();
+                    }
+                }
+                .ticket-5{
+                    text-align: center;
+                    border: none;
+                    margin-right: 30px;
+                    width: 80px;
+                    position: relative;
+                    left: calc(50% - 40px);
+                    .logo {
+                        background-image: url("../images/ticket_5.svg");
+                        background-repeat: no-repeat;
+                        background-position: 50% 50%;
+                        width: 80px;
+                        height: 80px;
+
+                    }
+                    .plus{
+                        @include plusButton();
+                    }
+                    .minus{
+                        @include minusButton();
+                    }
+                }
+                .ticket-10{
+                    text-align: center;
+                    border: none;
+                    width: 80px;
+                    position: relative;
+                    left: calc(50% - 40px);
+                    .logo {
+                        background-image: url("../images/ticket_10.svg");
+                        background-repeat: no-repeat;
+                        background-position: 50% 50%;
+                        width: 80px;
+                        height: 80px;
+                    }
+                    .plus{
+                        @include plusButton();
+                    }
+                    .minus{
+                        @include minusButton();
+                    }
+                }
+            }
+            .buyButton{
+                position: relative;
+                left: calc(50% - 100px);
+                button {
+                    background-color: white;
+                    background-image: url("../images/j_achete.svg");
+                    background-repeat: no-repeat;
+                    background-position: 50% 50%;
+                    width: 200px;
+                    height: 50px;
+                    border: none;
+                  }
+                  button span {
+                    display: none;
+                  }
+            }
+        }
+    }
 }
