--- a/src/components/tombola/css/tombola.scss
+++ b/src/components/tombola/css/tombola.scss
@@ -1,5 +1,5 @@
 @mixin plusButton{
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0);
     background-image: url("../images/button_+.svg");
     background-repeat: no-repeat;
     background-position: 50% 50%;
@@ -8,7 +8,7 @@
     border: none;
 }
 @mixin minusButton{
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0);
     background-image: url("../images/button_-.svg");
     background-repeat: no-repeat;
     background-position: 50% 50%;
