--- a/src/components/shotgun/css/shotgun.scss
+++ b/src/components/shotgun/css/shotgun.scss
@@ -41,6 +41,11 @@
           display: block;
         }
       }
+      .shotgun-result {
+        margin: auto;
+        width: auto;
+        text-align: center;
+      }
     }
     .canvas-container {
       background-color: white;
@@ -89,6 +94,10 @@
           margin: 10px auto;
           display: block;
         }
+      }
+      .shotgun-result {
+        margin: auto;
+        width: auto;
       }
     }
     .canvas-container {
