--- a/src/components/voyage/css/voyage.scss
+++ b/src/components/voyage/css/voyage.scss
@@ -52,11 +52,9 @@
     }
 }
 
-
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 767px) {
   .voyage {
-    position: fixed;
-    height: calc(100% - 25px);
+    position: absolute;
     width: 100%;
     background: url("../images/fond_voyage.png") no-repeat;
     background-size: cover;
