Bouton acheter a partir du common Cursor Pointer (boutons + et -) Achat impossible si nbre de tickets=0

--- a/src/css/colors.scss
+++ b/src/css/colors.scss
@@ -9,3 +9,4 @@ $light-brown:  	#FFCC66;
 $hover-light-brown: #fff5ca;
 $light-green : #26be17;
 $light-blue: #5DBCD215;
+$transparent: rgba(255, 255, 255, 0);
