--- a/src/components/tombola/css/tombola.scss
+++ b/src/components/tombola/css/tombola.scss
@@ -1,151 +1,149 @@
+@import "../../../css/colors.scss";
+
 @mixin plusButton{
-    background-color: rgba(255, 255, 255, 0);
+    background-color: $transparent;
     background-image: url("../images/button_+.svg");
     background-repeat: no-repeat;
     background-position: 50% 50%;
     width: 15px;
     height: 15px;
+    cursor: pointer;
     border: none;
 }
 @mixin minusButton{
-    background-color: rgba(255, 255, 255, 0);
+    background-color: $transparent;
     background-image: url("../images/button_-.svg");
     background-repeat: no-repeat;
     background-position: 50% 50%;
     width: 15px;
     height: 15px;
     margin-right: 30px;
+    cursor: pointer;
     border: none;
 }
 @media only screen and (min-width: 768px) {
-    .tombola{
-        background-color: white;
-        position: absolute;
-        height:100%;
-        max-width: 100%;
-        opacity: 0.8;
-        width: 100%;
-        .halfTombolaBG{
-            z-index: -1;
+    Body{
+        
+        .tombola{
+            background-color: white;
             position: absolute;
-            width:60%;
-            height: 100%;
-            background: url("../images/waves.png") no-repeat;
-            background-size: 100% 100%;
-        }
-        .headBlock{
-            width:100%;
-            height:33%;
-            margin-top: 20px;
-            .mainTitle{
+            height:100%;
+            max-width: 100%;
+            opacity: 0.8;
+            width: 100%;
+            .halfTombolaBG{
+                z-index: -1;
+                position: absolute;
+                width:60%;
+                height: 100%;
+                background: url("../images/waves.png") no-repeat;
+                background-size: 100% 100%;
+            }
+            .headBlock{
+                width:100%;
+                height:33%;
+                margin-top: 20px;
+                .mainTitle{
+                    width: 380px;
+                    margin-left: auto;
+                    margin-right: auto;
+                }
+            }
+            .recap{
+                width: 60%;
+                float: left;
+                .recapTitle{
+                    width: 300px;
+                    left: 10%;
+                    position: relative;
+                }
+                .recapTxt{
+                    color: White;
+                    margin-top: 50px;
+                    position: relative;
+                    width: 50%;
+                    left: 10%;
+                    font-size: 1.2em;
+                }
+                ul {
+                    list-style: none;
+                }
+            }
+            .buy{
+                margin-left: 55%;
                 width: 380px;
-                margin-left: auto;
-                margin-right: auto;
-            }
-        }
-        .recap{
-            width: 60%;
-            float: left;
-            .recapTitle{
-                width: 300px;
-                left: 10%;
-                position: relative;
-            }
-            .recapTxt{
-                color: White;
-                margin-top: 50px;
-                position: relative;
-                width: 50%;
-                left: 10%;
-                font-size: 1.2em;
-            }
-            ul {
-                list-style: none;
-            }
-        }
-        .buy{
-            margin-left: 55%;
-            .choices{
-                margin-left: 30px;
-                width: 350px;
-                .ticket-1{
-                    text-align: center;
-                    float: left;
-                    margin-right: 30px;
-                    width: 80px;
-                    .logo {
-                        background-image: url("../images/ticket_1.svg");
-                        background-repeat: no-repeat;
-                        background-position: 50% 50%;
+                .choices{
+                    margin-left: 30px;
+                    width: 350px;
+                    .ticket-1{
+                        text-align: center;
+                        float: left;
+                        margin-right: 30px;
                         width: 80px;
-                        height: 80px;
+                        .logo {
+                            background-image: url("../images/ticket_1.svg");
+                            background-repeat: no-repeat;
+                            background-position: 50% 50%;
+                            width: 80px;
+                            height: 80px;
 
+                        }
+                        .plus{
+                            @include plusButton();
+                        }
+                        .minus{
+                            @include minusButton();
+                        }
                     }
-                    .plus{
-                        @include plusButton();
+                    .ticket-5{
+                        text-align: center;
+                        border: none;
+                        float: left;
+                        margin-right: 30px;
+                        width: 80px;
+                        .logo {
+                            background-image: url("../images/ticket_5.svg");
+                            background-repeat: no-repeat;
+                            background-position: 50% 50%;
+                            width: 80px;
+                            height: 80px;
+
+                        }
+                        .plus{
+                            @include plusButton();
+                        }
+                        .minus{
+                            @include minusButton();
+                        }
                     }
-                    .minus{
-                        @include minusButton();
+                    .ticket-10{
+                        text-align: center;
+                        border: none;
+                        float: left;
+                        width: 80px;
+                        .logo {
+                            background-image: url("../images/ticket_10.svg");
+                            background-repeat: no-repeat;
+                            background-position: 50% 50%;
+                            width: 80px;
+                            height: 80px;
+                        }
+                        .plus{
+                            @include plusButton();
+                        }
+                        .minus{
+                            @include minusButton();
+                        }
                     }
                 }
-                .ticket-5{
-                    text-align: center;
-                    border: none;
-                    float: left;
-                    margin-right: 30px;
-                    width: 80px;
-                    .logo {
-                        background-image: url("../images/ticket_5.svg");
-                        background-repeat: no-repeat;
-                        background-position: 50% 50%;
-                        width: 80px;
-                        height: 80px;
-
-                    }
-                    .plus{
-                        @include plusButton();
-                    }
-                    .minus{
-                        @include minusButton();
+                #achat{
+                    visibility: hidden;
+                    position: relative;
+                    left: calc(50% - 165px);
+                    div{
+                        visibility: visible;
                     }
                 }
-                .ticket-10{
-                    text-align: center;
-                    border: none;
-                    float: left;
-                    width: 80px;
-                    .logo {
-                        background-image: url("../images/ticket_10.svg");
-                        background-repeat: no-repeat;
-                        background-position: 50% 50%;
-                        width: 80px;
-                        height: 80px;
-                    }
-                    .plus{
-                        @include plusButton();
-                    }
-                    .minus{
-                        @include minusButton();
-                    }
-                }
-            }
-            .buyButton{
-                clear: both;
-                margin-left:115px;
-                transform: translate(0px,-150px);
-                button {
-                    background-color: white;
-                    background-image: url("../images/j_achete.svg");
-                    background-repeat: no-repeat;
-                    background-position: 50% 50%;
-                    width: 200px;
-                    height: 50px;
-                    border: none;
-
-                  }
-                  button span {
-                    display: none;
-                  }
             }
         }
     }
@@ -153,134 +151,124 @@
 
 
 @media only screen and (max-width: 600px) {
-    .tombola{
-        background-color: white;
-        position: absolute;
-        height: 100%;
-        max-width: 100%;
-        opacity: 0.8;
-        width: 100%;
-        .halfTombolaBG{
-            z-index: -1;
+    Body{
+        .tombola{
+            background-color: white;
             position: absolute;
-            width:100%;
-            height: 65%;
-            min-height: 390px;
-            background: url("../images/wavesRotated.png") no-repeat;
-            background-size: 100% 100%; 
-        }
-        .headBlock{
-            width:100%;
-            margin-top: 20px;
-            .mainTitle{
-                width: 70%;
-                margin-left: auto;
-                margin-right: auto;
-            }
-        }
-        .recap{
-            br {
-                display: none;
-            }
+            height: 100%;
+            max-width: 100%;
+            opacity: 0.8;
             width: 100%;
-            .recapTitle{
-                width: 40%;
-                margin-left: auto;
-                margin-right: auto;
-                position: relative;
+            .halfTombolaBG{
+                z-index: -1;
+                position: absolute;
+                width:100%;
+                height: 65%;
+                min-height: 390px;
+                background: url("../images/wavesRotated.png") no-repeat;
+                background-size: 100% 100%; 
             }
-            .recapTxt{
-                color: White;
+            .headBlock{
+                width:100%;
                 margin-top: 20px;
-                position: relative;
-                width: 50%;
-                left: 10%;
-                font-size: 1.2em;
-            }
-            ul {
-                list-style: none;
-            }
-        }
-        .buy{
-            .choices{
-                .ticket-1{
-                    text-align: center;
-                    width: 80px;
-                    position: relative;
-                    left: calc(50% - 40px);
-                    .logo {
-                        background-image: url("../images/ticket_1.svg");
-                        background-repeat: no-repeat;
-                        background-position: 50% 50%;
-                        width: 80px;
-                        height: 80px;
-
-                    }
-                    .plus{
-                        @include plusButton();
-                    }
-                    .minus{
-                        @include minusButton();
-                    }
-                }
-                .ticket-5{
-                    text-align: center;
-                    border: none;
-                    margin-right: 30px;
-                    width: 80px;
-                    position: relative;
-                    left: calc(50% - 40px);
-                    .logo {
-                        background-image: url("../images/ticket_5.svg");
-                        background-repeat: no-repeat;
-                        background-position: 50% 50%;
-                        width: 80px;
-                        height: 80px;
-
-                    }
-                    .plus{
-                        @include plusButton();
-                    }
-                    .minus{
-                        @include minusButton();
-                    }
-                }
-                .ticket-10{
-                    text-align: center;
-                    border: none;
-                    width: 80px;
-                    position: relative;
-                    left: calc(50% - 40px);
-                    .logo {
-                        background-image: url("../images/ticket_10.svg");
-                        background-repeat: no-repeat;
-                        background-position: 50% 50%;
-                        width: 80px;
-                        height: 80px;
-                    }
-                    .plus{
-                        @include plusButton();
-                    }
-                    .minus{
-                        @include minusButton();
-                    }
+                .mainTitle{
+                    width: 70%;
+                    margin-left: auto;
+                    margin-right: auto;
                 }
             }
-            .buyButton{
-                position: relative;
-                left: calc(50% - 100px);
-                button {
-                    background-color: white;
-                    background-image: url("../images/j_achete.svg");
-                    background-repeat: no-repeat;
-                    background-position: 50% 50%;
-                    width: 200px;
-                    height: 50px;
-                    border: none;
-                  }
-                  button span {
+            .recap{
+                br {
                     display: none;
-                  }
+                }
+                width: 100%;
+                .recapTitle{
+                    width: 40%;
+                    margin-left: auto;
+                    margin-right: auto;
+                    position: relative;
+                }
+                .recapTxt{
+                    color: White;
+                    margin-top: 20px;
+                    position: relative;
+                    width: 50%;
+                    left: 10%;
+                    font-size: 1.2em;
+                }
+                ul {
+                    list-style: none;
+                }
+            }
+            .buy{
+                .choices{
+                    .ticket-1{
+                        text-align: center;
+                        width: 80px;
+                        position: relative;
+                        left: calc(50% - 40px);
+                        .logo {
+                            background-image: url("../images/ticket_1.svg");
+                            background-repeat: no-repeat;
+                            background-position: 50% 50%;
+                            width: 80px;
+                            height: 80px;
+
+                        }
+                        .plus{
+                            @include plusButton();
+                        }
+                        .minus{
+                            @include minusButton();
+                        }
+                    }
+                    .ticket-5{
+                        text-align: center;
+                        border: none;
+                        width: 80px;
+                        position: relative;
+                        left: calc(50% - 40px);
+                        .logo {
+                            background-image: url("../images/ticket_5.svg");
+                            background-repeat: no-repeat;
+                            background-position: 50% 50%;
+                            width: 80px;
+                            height: 80px;
+
+                        }
+                        .plus{
+                            @include plusButton();
+                        }
+                        .minus{
+                            @include minusButton();
+                        }
+                    }
+                    .ticket-10{
+                        text-align: center;
+                        border: none;
+                        width: 80px;
+                        position: relative;
+                        left: calc(50% - 40px);
+                        .logo {
+                            background-image: url("../images/ticket_10.svg");
+                            background-repeat: no-repeat;
+                            background-position: 50% 50%;
+                            width: 80px;
+                            height: 80px;
+                        }
+                        .plus{
+                            @include plusButton();
+                        }
+                        .minus{
+                            @include minusButton();
+                        }
+                    }
+                }
+                #achat{
+                    width: 260px;
+                    position: relative;
+                    left: calc(50% - 130px);
+                }
             }
         }
     }
