--- a/src/components/common/buttons/buttons.scss
+++ b/src/components/common/buttons/buttons.scss
@@ -188,3 +188,48 @@
     }
   }
 }
+
+
+/*
+Responsive calls
+ */
+@media only screen and (max-width: 600px) {
+  .container-wrapper {
+    margin: 0;
+    .container{
+      margin: 0;
+
+      &.one, &.two, &.three, &.four{
+        display: none;
+      }
+    }
+
+  }
+
+  .buttons {
+    &.link-button-wrapper {
+      width: 60px;
+    }
+
+    &.link-button {
+      margin: 5px;
+      .link-button-separator{
+        display: none;
+      }
+
+      .link-button-name {
+        font-size: 0.8em;
+      }
+
+      .link-button-icon {
+        max-width: 40px;
+      }
+    }
+
+    &.simple-button {
+      font-size: 1em;
+      min-width: 150px;
+      margin: 5px;
+    }
+  }
+}
