adding contextmenu on accueil

--- a/src/components/tombola/css/tombola.scss
+++ b/src/components/tombola/css/tombola.scss
@@ -267,7 +267,7 @@
                 #achat{
                     width: 260px;
                     position: relative;
-                    left: calc(50% - 130px);
+                    left: 25%;
                 }
             }
         }
