update info static

--- a/src/css/container.scss
+++ b/src/css/container.scss
@@ -5,6 +5,8 @@
 @import "../components/common/css/pageTitle.scss";
 @import "../components/tombola/css/tombola.scss";
 @import "../components/shotgun/css/shotgun.scss";
+@import "../components/compte/css/compte.scss";
+@import "../components/admin/css/admin.scss";
 
 @font-face {
   font-family: "Acumin";
