--- a/src/components/tombola/css/tombola.scss
+++ b/src/components/tombola/css/tombola.scss
@@ -71,13 +71,14 @@
             }
             .buy{
                 margin-left: 55%;
-                width: 380px;
+                width: 400px;
+                position: absolute;
                 .choices{
                     margin-left: 30px;
                     width: 350px;
+                    display:flex;
                     .ticket-1{
                         text-align: center;
-                        float: left;
                         margin-right: 30px;
                         width: 80px;
                         .logo {
@@ -98,7 +99,6 @@
                     .ticket-5{
                         text-align: center;
                         border: none;
-                        float: left;
                         margin-right: 30px;
                         width: 80px;
                         .logo {
@@ -119,7 +119,6 @@
                     .ticket-10{
                         text-align: center;
                         border: none;
-                        float: left;
                         width: 80px;
                         .logo {
                             background-image: url("../images/ticket_10.svg");
@@ -139,7 +138,7 @@
                 #achat{
                     visibility: hidden;
                     position: relative;
-                    left: calc(50% - 165px);
+                    left: calc(50% - 145px);
                     div{
                         visibility: visible;
                     }
