--- a/src/css/container.scss
+++ b/src/css/container.scss
@@ -193,6 +193,7 @@ Inputs
   padding-top: 10px;
   padding-right: 10px;
   position: sticky;
+  position: -webkit-sticky;
   z-index: 99;
   top: 0;
   float: left;
