--- a/src/css/colors.scss
+++ b/src/css/colors.scss
@@ -2,6 +2,7 @@ $black : #000000;
 $white : #FFFFFF;
 $svg-white: invert(100%) sepia(2%) saturate(3%) hue-rotate(250deg) brightness(103%) contrast(100%);
 $simple-grey : #303030;
+$light-grey: #30303044;
 $hover-blue: #016e8b;
 $svg-hover-blue: invert(27%) sepia(40%) saturate(3102%) hue-rotate(167deg) brightness(94%) contrast(99%);
 $brown: #8e5526;
