--- a/src/components/packs/css/blocks.scss
+++ b/src/components/packs/css/blocks.scss
@@ -56,7 +56,8 @@
       height: 100%;
       width: 100%;
       backface-visibility: hidden;
-
+      -webkit-backface-visibility: hidden;
+      -moz-backface-visibility: hidden;
       .packs-block-name {
         font-family: "Acumin";
         font-style: italic;
