--- a/src/css/colors.scss
+++ b/src/css/colors.scss
@@ -11,3 +11,6 @@ $hover-light-brown: #fff5ca;
 $light-green : #26be17;
 $light-blue: #5DBCD215;
 $transparent: rgba(255, 255, 255, 0);
+
+$admin-unselected: #b37f53;
+$admin-selected: #ffc771;
