delete import svg

--- a/src/components/common/buttons/buttons.scss
+++ b/src/components/common/buttons/buttons.scss
@@ -69,7 +69,7 @@
       &.link-button {
         color: $hover-blue;
 
-        .link-button-icon object {
+        .link-button-icon img {
           filter: $svg-hover-blue;
         }
 
