--- a/src/css/colors.scss
+++ b/src/css/colors.scss
@@ -12,5 +12,6 @@ $light-green : #26be17;
 $light-blue: #5DBCD215;
 $transparent: rgba(255, 255, 255, 0);
 
-$admin-unselected: #b37f53;
-$admin-selected: #ffc771;
+$admin-unselected: #333;
+$admin-unselected-hover: #000;
+$admin-selected: #5c88ff;
