according to back

--- a/src/components/compte/css/compte.scss
+++ b/src/components/compte/css/compte.scss
@@ -71,9 +71,9 @@
       }
     }
     .row.last {
-      left: 25%;
+      margin: auto;
       position: relative;
-      width: 50%;
+      width: fit-content;
     }
     .requests-buttons {
       margin: auto;
